Creacion y funcionamiento de la base de datos

--- a/views/noticias.html
+++ b/views/noticias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
                 <li class="nav__items">
                     <a href="#" class="nav__links">Login</a>
                 </li>
-                <img src="../assets/img/close.svg" alt="close" class="nav__close">
             </ul>
+            <img src="../assets/img/close.svg" alt="close" class="nav__close">
             <div class="nav__menu">
                 <img src="../assets/img/menu.svg" alt="menu" class="nav__img">
             </div>
@@ -38,13 +38,13 @@
     </header>
 
     <main>
-        <section>
-
-        </section>
+        <div class="container about">
+            
+        </div>
     </main>
 
     <footer class="footer">
-        <section class="footer__container container">
+        <div class="footer__container container">
             <nav class="nav nav__footer">
                 <h2 class="footer__title">
                     Proyecto final de PHP y SQL
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
             </nav>
-        </section>
+        </div>
 
         <section class="footer__copy container">
             <div class="footer__social">
