--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="../index.html" class="nav__links">Inicio</a>
+                    <a href="../index.php" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
                     <a href="../views/noticias.html" class="nav__links">Noticias</a>
@@ -51,7 +51,7 @@
                 </h2>
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
-                        <a href="../index.html" class="nav__links">Inicio</a>
+                        <a href="../index.php" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
                         <a href="../views/noticias.html" class="nav__links">Noticias</a>
