--- a/views/login.html
+++ b/views/login.html
@@ -38,9 +38,9 @@
     </header>
 
     <main>
-        <section>
+        <div>
 
-        </section>
+        </div>
     </main>
 
     <footer class="footer">
