--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,20 @@ body{
     margin-bottom: 10px;
 }
 
+/*Registro*/
+.mi__form{
+    padding-top: 60px;
+}
+
+.form__options{
+    margin-bottom: 12px;
+}
+
+.form__buttons input[type="reset"]{
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
 /*Media queries*/
 @media (max-width: 800px){
     .nav__menu{
