--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ body{
     margin-bottom: 12px;
 }
 
-.form__buttons input[type="reset"]{
+.form__buttons{
     margin-top: 30px;
     margin-right: 30px;
 }
